# book_reader

./: README.md  pyproject.toml  requirements.txt
docs/: architecture.md
reader_app/: __init__.py  context_matcher.py  image_catalog.py  reader.py
reader_app/cli/: __init__.py  catalog_editor.py
reader_app/config/: __init__.py  state.py
reader_app/ui/: __init__.py  main_window.py
resources/: Ziraldino.txt  sample_book.txt  sample_catalog.yaml
resources/images/: dawn_train.jpg:Zone.Identifier  market_lanterns.jpg:Zone.Identifier  night_ridge.jpg:Zone.Identifier
scripts/: demo_reader.py
tests/: test_config_state.py  test_context_matcher.py
